[package]
name = "network-communicator"
version = "0.1.1"
authors = ["Mikhail Svetov <svmk-work@yandex.ru>"]
description = "Network manager for download/upload content based on tokio-curl crate using HTTP protocol"
license = "MIT"
documentation = "http://svmk.github.io/rust-network-communicator/0.1.0/network_communicator/index.html"

[dependencies]
mio="0.6"
quick-error = "1.2"
curl="0.4"